--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ first_name: Varun
 middle_name: 
 last_name: Sharma
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  The best way to reach me is via LinkedIn.``
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
